kyverno/network/tls/kyverno_kubernetes_015.yaml
# policy id: kyverno-kubernetes-015
# reason: enforce organization security control for kubernetes, using Kyverno, Ingress resources must configure TLS
# severity: medium

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-kubernetes-015-require-ingress-tls
  annotations:
    policies.kyverno.io/title: Ingress resources must configure TLS
    policies.kyverno.io/category: network
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: Ingress resources must configure TLS.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-ingress-tls
      match:
        any:
          - resources:
              kinds:
                - Ingress
      validate:
        message: Ingress resources must configure TLS.
        pattern:
          spec.tls[0].hosts[0]: '?*'
